syntax="proto3";

package posts;

// Types for the services
message Post {
    int32 id = 1;
    string title = 2;
    string content = 3;
    int32 authorId = 4;
}

message Posts {
    repeated Post posts = 1;
}

message CreatePostDto {
    string title = 1;
    string content = 2;
    int32 authorId = 3;
}

message UpdatePostDto {
    int32 id = 1;
    string title = 2;
    string content = 3;
}

message PostById {
    int32 id = 1;
}

message Empty {}

// Services

service PostsService{
    rpc Create(CreatePostDto) returns (Post) {};
    rpc FindAll(Empty) returns (Posts) {};
    rpc FindOne(PostById) returns (Post) {};
    rpc Update(UpdatePostDto) returns (Post) {};
    rpc Remove(PostById) returns (Empty) {};
}